--- a/katering.html
+++ b/katering.html
@@ -55,7 +55,7 @@
             </section>
             <section class="contact-details">
                 <h2>Kontak</h2>
-                <p>Warteg IFelse <br /> di seluruh Indonesia
+                <p>+628xxxxxxxxx<br>wartegifelse@gmail.xxx</p>
             </section>
         </aside>
         <!--Footer-->
