--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html">Beranda</a></li>
                     <li><a href="fullMenu.html">Daftar Masakan</a></li>
                     <li><a href="katering.html">Katering</a></li>
+                    <li><a href="#kontak">Kontak</a></li>
                 </ul>
             </nav>
         </header>
@@ -55,7 +56,7 @@
                 <a href="fullMenu.html">Soto Ayam</a>
                 <a href="fullMenu.html">Batagor</a>
             </section>
-            <section class="contact-details">
+            <section class="contact-details" id="kontak">
                 <h2>Kontak</h2>
                 <p>+628xxxxxxxxx<br>wartegifelse@gmail.xxx</p>
             </section>
